Reset email fragment and email confirmation fragment ui setup for issue #33
Signed-off-by: James Gitonga <40741293+JayExtra@users.noreply.github.com>

--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -1,14 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.auth.fragments.ResetPasswordFragment">
+    android:animateLayoutChanges="true"
+    android:overScrollMode="ifContentScrolls"
+    android:scrollbars="none"
+    tools:context=".ui.auth.fragments.ResetPasswordFragment"
+    tools:ignore="SpeakableTextPresentCheck">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content">
 
-</FrameLayout>
+        <FrameLayout
+            android:id="@+id/resetPassFrame"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginBottom="@dimen/_56sdp"
+            android:animateLayoutChanges="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/resetEmailLayout"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/resetEmailLayout"
+            app:layout_constraintTop_toBottomOf="@+id/resetEmailLayout">
+
+            <ProgressBar
+                android:id="@+id/progressBarResetPass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/yellow"
+                android:visibility="gone" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnSendPassReset"
+                style="@style/Theme.DevStoriesAfrica.CustomButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/source_sans_pro"
+                android:text="@string/send_instructions_reset_password"
+                android:textColor="@color/white"
+                app:backgroundTint="@color/yellow" />
+        </FrameLayout>
+
+        <Button
+            android:id="@+id/backButton"
+            style="@style/Theme.DevStoriesAfrica.CustomTextButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_13sdp"
+            android:layout_marginTop="@dimen/_24sdp"
+            android:fontFamily="@font/source_sans_pro"
+            android:text="@string/back_button_text"
+            app:icon="@drawable/ic_back_arrow"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/infoText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_24sdp"
+            android:layout_marginEnd="@dimen/_16sdp"
+            android:fontFamily="@font/source_sans_pro"
+            android:text="@string/info_string_reset_password"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14ssp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/mainHeading"
+            app:layout_constraintTop_toBottomOf="@+id/mainHeading" />
+
+        <TextView
+            android:id="@+id/emailSubHeading"
+            style="@style/TextAppearance.MaterialComponents.Headline6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/source_sans_pro"
+            android:text="@string/email_address_heading_reset_password"
+            app:layout_constraintEnd_toEndOf="@+id/infoText"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/infoText"
+            app:layout_constraintTop_toBottomOf="@+id/infoText" />
+
+        <TextView
+            android:id="@+id/mainHeading"
+            style="@style/TextAppearance.MaterialComponents.Headline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/source_sans_pro"
+            android:text="@string/reset_password_heading"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/backButton"
+            app:layout_constraintTop_toBottomOf="@+id/backButton" />
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/resetEmailLayout"
+            style="@style/Theme.DevStoriesAfrica.CustomTextInputLayoutStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginEnd="@dimen/_48sdp"
+            android:hint="@string/email"
+            app:errorEnabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/emailSubHeading"
+            app:startIconDrawable="@drawable/ic_email"
+            app:startIconTint="@color/yellow">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/resetEmailEt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/source_sans_pro"
+                android:hint="@string/email"
+                android:imeOptions="actionNext"
+                android:inputType="text|textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
