--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
 
     <color name="light_blue">#b8f3f7</color>
     <color name="blue">#4800e0</color>
-    <color name="yellow">#ffb600</color>
+    <color name="yellow">#FFB700</color>
 </resources>
