Feat: Add Onboarding Screens

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginTop="37dp"
+        android:fontFamily="@font/source_sans_pro"
         android:text="Get Booking Notifications"
         android:textColor="@color/black"
         android:textFontWeight="600"
@@ -36,6 +37,7 @@
         android:layout_height="50dp"
         android:layout_marginHorizontal="13dp"
         android:layout_marginTop="39dp"
+        android:fontFamily="@font/source_sans_pro"
         android:text="You will get regular updates to upcoming events. Enjoy easy booking"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -53,6 +55,7 @@
         android:layout_marginHorizontal="44dp"
         android:layout_marginTop="88dp"
         android:layout_marginBottom="21dp"
+        android:fontFamily="@font/source_sans_pro"
         android:text="GET STARTED"
         android:textColor="@color/white"
         app:backgroundTint="@color/yellow"
