--- a/app/src/main/res/layout/fragment_top_events.xml
+++ b/app/src/main/res/layout/fragment_top_events.xml
@@ -16,55 +16,79 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    
+
     <TextView
         android:id="@+id/explore_events_text"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:text="Explore Top Events"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="28sp"
         android:layout_marginTop="37dp"
+        android:fontFamily="@font/source_sans_pro"
+        android:text="Explore Top Events"
         android:textColor="@color/black"
         android:textFontWeight="600"
-        app:layout_constraintTop_toBottomOf="@id/top_events_image"/>
-    
+        android:textSize="28sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/top_events_image" />
+
     <TextView
         android:layout_width="334dp"
         android:layout_height="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/explore_events_text"
         android:layout_marginHorizontal="13dp"
-        android:text="Listen to inspiring stories from developers around Africa"
         android:layout_marginTop="39dp"
+        android:fontFamily="@font/source_sans_pro"
+        android:text="Listen to inspiring stories from developers around Africa"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:textFontWeight="400"
         android:textSize="20sp"
-        android:textAlignment="center"
-        android:textColor="@color/black"/>
-    
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/explore_events_text" />
+
     <TextView
+        android:id="@+id/top_events_skip"
         android:layout_width="wrap_content"
         android:layout_height="28dp"
-        android:text="Skip"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="35dp"
-        android:textSize="22sp"
+        android:fontFamily="@font/source_sans_pro"
+        android:text="Skip"
+        android:textColor="@color/black"
         android:textFontWeight="400"
-        android:textColor="@color/black"/>
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/first_view"
+        android:layout_width="48dp"
+        android:layout_height="8dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginBottom="42dp"
+        android:background="@drawable/onboarding_view"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/top_events_skip" />
+
+    <View
+        android:layout_width="30dp"
+        android:layout_height="7dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="42dp"
+        android:background="@drawable/onboarding_view_faded"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/first_view" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/top_events_button"
-        app:backgroundTint="@color/yellow"
         android:layout_width="85dp"
         android:layout_height="50dp"
-        android:text="NEXT"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/source_sans_pro"
+        android:text="NEXT"
+        app:backgroundTint="@color/yellow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
