--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,9 +14,9 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="splashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-
+ <!--
         <item name="android:windowBackground">@drawable/splash_image</item>
-        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:statusBarColor">@color/white</item> -->
     </style>
     <style name="Theme.DevStoriesAfrica.CustomTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxCornerRadiusTopStart">@dimen/_10sdp</item>
@@ -32,6 +32,7 @@
         <item name="android:paddingTop">@dimen/_10sdp</item>
         <item name="android:paddingBottom">@dimen/_10sdp</item>
         <item name="cornerRadius">@dimen/_10sdp</item>
+        <item name="fontFamily">@font/source_sans_pro</item>
         <item name="backgroundColor">@color/yellow</item>
     </style>
 
@@ -40,5 +41,10 @@
         <item name="android:textSize">@dimen/_18ssp</item>
         <item name="android:textColor">@color/black</item>
         <item name ="android:fontFamily">@font/source_sans_pro</item>
+    </style>
+
+    <style name="roundedImageViewRounded">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 </resources>
