--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -43,8 +43,15 @@
         <item name ="android:fontFamily">@font/source_sans_pro</item>
     </style>
 
+    <style name="Theme.DevStoriesAfrica.CustomNavDrawerTextStyle" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textSize">@dimen/_20ssp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name ="android:fontFamily">@font/source_sans_pro</item>
+    </style>
+
     <style name="roundedImageViewRounded">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+
 </resources>
